# shotover-examples

./: .gitignore  readme.md
.github/workflows/: build_and_test.yaml
cassandra-1-1/: docker-compose.yaml  topology.yaml
cassandra-1-many/: docker-compose.yaml  topology.yaml
custom-transforms/: todo.md
kafka-1-many/: docker-compose.yaml  topology.yaml
redis-backup-cluster/: docker-compose.yaml  topology.yaml
redis-cluster-1-1/: docker-compose.yaml  topology.yaml
redis-cluster-1-many/: docker-compose.yaml  topology.yaml
tests/: Cargo.toml  rust-toolchain.toml
tests/tests/: tests.rs
tests/tests/cassandra/: mod.rs
tests/tests/kafka/: mod.rs
tests/tests/redis/: mod.rs
tests/tests/valkey/: mod.rs
valkey-backup-cluster/: docker-compose.yaml
valkey-cluster-1-1/: docker-compose.yaml  topology.yaml
valkey-cluster-1-many/: docker-compose.yaml  topology.yaml
